# wgpu-3dgs-viewer

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
coverage/: README.md  badge.json  coverage.rs  lcov.info  run.ps1  run.sh
examples/: README.md  bevy_simple.rs  dev.rs  multi_model.rs  selection.rs  simple.rs
examples/shader/selection/: viewport_texture_overlay.wgsl
examples/utils/: core.rs  mod.rs  selection.rs
src/: bin.rs  buffer.rs  camera.rs  error.rs  gaussian.rs  lib.rs  lod.rs  mask_evaluator.rs  mask_gizmo.rs  multi_model.rs  multi_model_viewer.rs  postprocessor.rs  preprocessor.rs  query.rs  query_cursor.rs  query_texture_overlay.rs  query_texture_tool.rs  query_tool.rs  query_toolset.rs  radix_sorter.rs  renderer.rs  shader.rs  streaming.rs  wesl_utils.rs
src/bevy_plugin/: mod.rs  render.rs
src/buffer/: camera.rs  depth.rs  gaussian.rs  indirect_args.rs  mask.rs  misc.rs  mod.rs  query.rs  selection.rs  texture.rs
src/selection/: buffer.rs  mod.rs  viewport.rs  viewport_selector.rs  viewport_texture_brush.rs  viewport_texture_rectangle.rs
src/shader/: camera.wesl  gaussian.wesl  gaussian_configs.wgsl  gaussian_render.wesl  gaussian_transform.wesl  mask_evaluation.wgsl  mask_evaluation_shape.wgsl  mask_gizmo_box.wgsl  mask_gizmo_ellipsoid.wgsl  model_transform.wesl  postprocess.wgsl  preprocess.wesl  preprocess.wgsl  query_cursor.wgsl  query_texture_overlay.wgsl  query_texture_tool_brush.wgsl  query_texture_tool_rect.wgsl  radix_sort.wgsl  render.wesl  render.wgsl  utils.wesl
src/shader/gaussians/: high.wgsl
src/shader/selection/: viewport.wesl  viewport_texture_brush.wesl  viewport_texture_rectangle.wesl
tests/: mod.rs
tests/buffer/: camera.rs  indirect_args.rs  mod.rs  selection.rs
tests/common/: assert_render_target.rs  given.rs  inline_wesl_pkg.rs  mod.rs  test_context.rs
tests/e2e/: mod.rs  multi_model.rs  selection.rs  viewer.rs
