[package]
name = "wgpu-3dgs-viewer"
version = "0.4.0"
edition = "2024"
authors = ["Lio Qing"]
license = "MIT OR Apache-2.0"
description = "A 3D Gaussian splatting viewing library written in Rust using wgpu."
readme = "README.md"
include = [
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md",
    "Cargo.toml",
    "examples/**/*",
    "src/**/*",
]
repository = "https://github.com/LioQing/wgpu-3dgs-viewer"
homepage = "https://github.com/LioQing/wgpu-3dgs-viewer"
keywords = ["gaussian-splatting", "point-cloud", "wgpu", "graphics", "ply"]
categories = ["graphics", "rendering", "wasm"]

[lib]
name = "wgpu_3dgs_viewer"
path = "src/lib.rs"

[[example]]
name = "multi-model"
path = "examples/multi_model.rs"
required-features = ["multi-model"]
doc-scrape-examples = true

[[example]]
name = "selection"
path = "examples/selection.rs"
required-features = ["viewer-selection"]
doc-scrape-examples = true

[[example]]
name = "simple"
path = "examples/simple.rs"
doc-scrape-examples = true

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
multi-model = []
selection = ["editor"]
viewer-selection = ["selection"]
editor = ["dep:wgpu-3dgs-editor"]

[dependencies]
wgpu-3dgs-core = { version = "0.4" }
wgpu-3dgs-editor = { version = "0.4", optional = true }

# For local development:
# wgpu-3dgs-core = { path = "../wgpu-3dgs-core" }
# wgpu-3dgs-editor = { path = "../wgpu-3dgs-editor", optional = true }

bytemuck = { version = "1.23", features = [
    "derive",
    "extern_crate_alloc",
    "min_const_generics",
] }
bitflags = { version = "2.9", features = ["bytemuck"] }
glam = { version = "0.30", features = ["bytemuck"] }
half = { version = "2.6", features = ["bytemuck"] }
log = "0.4"
oneshot = "0.1"
paste = "1.0"
thiserror = "2.0"
wgpu = "26.0"
wesl = "0.2"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = { version = "3.0" }
env_logger = { version = "0.11" }
futures = { version = "0.3" }
pollster = "0.4.0"
winit = { version = "0.30" }
