[package]
name = "wgpu-3dgs-viewer"
version = "0.6.1"
edition = "2024"
authors = ["Lio Qing"]
license = "MIT OR Apache-2.0"
description = "A 3D Gaussian splatting viewing library written in Rust using wgpu."
readme = "README.md"
include = [
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md",
    "Cargo.toml",
    "examples/**/*",
    "src/**/*",
]
repository = "https://github.com/LioQing/wgpu-3dgs-viewer"
homepage = "https://github.com/LioQing/wgpu-3dgs-viewer"
keywords = ["gaussian-splatting", "wgpu", "graphics", "ply", "spz"]
categories = ["graphics", "rendering", "wasm"]

[lib]
name = "wgpu_3dgs_viewer"
path = "src/lib.rs"

[[example]]
name = "multi-model"
path = "examples/multi_model.rs"
required-features = ["multi-model"]
doc-scrape-examples = true

[[example]]
name = "selection"
path = "examples/selection.rs"
required-features = ["viewer-selection"]
doc-scrape-examples = true

[[example]]
name = "simple"
path = "examples/simple.rs"
doc-scrape-examples = true

[[example]]
name = "bevy-simple"
path = "examples/bevy_simple.rs"
required-features = ["bevy"]
doc-scrape-examples = true

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
multi-model = []
selection = ["editor"]
viewer-selection = ["selection"]
editor = ["dep:wgpu-3dgs-editor"]
bevy = ["dep:bevy"]
lod = []
streaming = []

[dependencies]
wgpu-3dgs-core = { version = "0.6" }
wgpu-3dgs-editor = { version = "0.6", optional = true }

# For local development:
# wgpu-3dgs-core = { path = "../wgpu-3dgs-core" }
# wgpu-3dgs-editor = { path = "../wgpu-3dgs-editor", optional = true }

# For developing against latest upstream:
# wgpu-3dgs-core = { git = "https://github.com/LioQing/wgpu-3dgs-core" }
# wgpu-3dgs-editor = { git = "https://github.com/LioQing/wgpu-3dgs-editor", optional = true }

# Bevy integration (optional).
# NOTE: Requires that bevy's wgpu version matches this crate's wgpu version.
# You may need to use [patch.crates-io] or a compatible Bevy fork to align
# wgpu versions. wgpu-3dgs-core v0.6 uses wgpu 28.0.
bevy = { version = "0.18", optional = true, default-features = false, features = [
    "bevy_render",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
] }

bytemuck = { version = "1.24", features = [
    "derive",
    "extern_crate_alloc",
    "min_const_generics",
] }
bitflags = { version = "2.10", features = ["bytemuck"] }
glam = { version = "0.30", features = ["bytemuck"] }
half = { version = "2.7", features = ["bytemuck"] }
log = "0.4"
oneshot = "0.1"
paste = "1.0"
thiserror = "2.0"
wgpu = "28.0"
wesl = "0.3"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = { version = "3.0" }
env_logger = { version = "0.11" }
pollster = { version = "0.4" }
winit = { version = "0.30" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(feature, values("bevy", "lod", "streaming"))'] }
